# SuperMegaBot_SMB

./: LICENSE  README.md
docs/: roscdpaths.txt
planning/follow_waypoints/: README.md
planning/smb_mission_planner/: CMakeLists.txt  README.md  package.xml  setup.py
planning/smb_mission_planner/configs/missions/: example_mission.yaml  mission.yaml
planning/smb_mission_planner/launch/: mission_planner.launch  mission_recorder.launch
planning/smb_mission_planner/scripts/: mission_planner_node.py  mission_recorder_node.py
planning/smb_mission_planner/scripts/examples/: navigation_mission.py
planning/smb_mission_planner/src/smb_mission_planner/: __init__.py  mission_planner.py  mission_recorder.py
planning/smb_mission_planner/src/smb_mission_planner/missions/: twist_mission.py  waypoint_mission.py
planning/smb_mission_planner/srv/: RecordMission.srv  RemoveMission.srv  RemoveWaypoint.srv  ToggleFileDump.srv
smb_bkp/: LICENSE  README.md
smb_control/: CMakeLists.txt  package.xml
smb_control/config/: control.yaml  empty.yaml  gazebo_interface.yaml  localization.yaml  public_interface.yaml  twist_mux.yaml
smb_control/launch/: control.launch
smb_description/: CMakeLists.txt  TODO
smb_description/launch/: debug.launch  load.launch
smb_description/resources/: smb.urdf
smb_gazebo/: CMakeLists.txt  package.xml
smb_gazebo/bash/: 2Dmap_datehour.sh  3DVmap_datehour.sh  3Dmap_datehour.sh  3SDmap_datehour.sh  bag_datehour.sh  map_datehour.sh
smb_gazebo/launch/: gmapping.launch  hector_mapping.launch  smbAut.gv  smbAut.launch  smbMapG+smbTel.gv  (+8 more)
(+49 files in other folders)
